syntax = "proto3";

option go_package = "github.com/fine-track/api-app/pb";

import "google/protobuf/timestamp.proto";

enum RecordType {
	EXPENSE = 0;
	INCOME = 1;
}

message CreateRecordRequest {
	RecordType					type		= 2;
	string						title		= 3;
	int32						amount		= 4;
	string						description	= 5;
	google.protobuf.Timestamp	created_at	= 6;
	google.protobuf.Timestamp	updated_at	= 7;
}

message Record {
	string						id			= 1;
	RecordType					type		= 2;
	string						title		= 3;
	int32						amount		= 4;
	string						description	= 5;
	google.protobuf.Timestamp	created_at	= 6;
	google.protobuf.Timestamp	updated_at	= 7;
}

message DeleteRecordRequest {
	string id = 1;
}

message DeleteRecordResponse {
	bool	success = 1;
}

message UpdateRecordResponse {
	bool	success	= 1;
	Record	record	= 2;
}

message GetRecordsRequest {
	RecordType	type	= 1;
	int32				page	= 2;
}

message GetRecordsResponse {
	bool							success		= 1;
	repeated Record		records		= 2;
	int32							next_page	= 3;
}

service RecordsService {
	rpc Create(CreateRecordRequest) returns (UpdateRecordResponse) {}

	rpc Update(Record) returns (UpdateRecordResponse) {}

	rpc Delete(DeleteRecordRequest) returns (DeleteRecordResponse) {}

	rpc GetRecords(GetRecordsRequest) returns (GetRecordsResponse) {}
}